kube/wp/sandbox/webapp/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp-sandbox
  name: webapp-sandbox
  namespace: mi-production-tracker-sandbox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-sandbox
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-sandbox
    spec:
      containers:
      - image: rwilsonebi/production-tracker-webapp:latest
        imagePullPolicy: Always
        name: webapp-sandbox
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
